# CMakeEx

./: CMakeLists.txt  main.cpp  turboactivateex.cpp  turboactivateex.h  turbofloatex.cpp  turbofloatex.h
include/TurboActivate/: TurboActivate.h  TurboActivate.h~  dcs.info
include/TurboFloat/: TurboFloat.h
lib/LimeLM/v3.4.7/TurboActivate/win32/shared/: TurboActivate.lib
lib/LimeLM/v3.4.7/TurboActivate/win32/static/: TurboActivate-MD.lib  curllib-MD.lib  curllib.lib  curllibd-MD.lib  curllibd.lib
lib/LimeLM/v3.5.6/TurboFloat/linux/static/: README.txt
lib/LimeLM/v3.5.6/TurboFloat/win32/static/: TurboFloat.lib
